add getAuthor