@@ -11,6 +11,8 @@ dependencies {
                                     "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
                                     "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
                                     "--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+                                    "--add-exports", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                                    "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
                                     "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"]
             classpath = files()
         }
